<resources>
    <string name="app_name">玖e行用车</string>
    <string name="please_input_hint">请输入</string>
    <string name="please_select">请选择</string>
    <string name="apply_save">保 存</string>
    <string name="apply_commit">提 交</string>
    <string name="vehicle_order_date">按日期显示</string>
    <string name="vehicle_order_vehicle">按车牌显示</string>
    <string name="vehicle_apply_name">申请人 :</string>
    <string name="vehicle_apply_time">申请时间 :</string>
    <string name="vehicle_apply_destination">目的地 :</string>
    <string name="vehicle_apply_vehicle_type">用车类型 :</string>
    <string name="vehicle_apply_vehicle_range">用车范围 :</string>
    <string name="vehicle_apply_predict_vehicle_time">预计用车时间 :</string>
    <string name="vehicle_apply_designated_vehicle">指定车辆 :</string>
    <string name="vehicle_apply_predict_time">预计用车时长 :</string>
    <string name="vehicle_apply_vehicle_reason">用车事由 :</string>
    <string name="vehicle_apply_designated_driver">指定司机 :</string>
    <string name="vehicle_apply_accompany_person">随行人 :</string>
    <string name="vehicle_apply_remark">备 注 :</string>
    <string name="vehicle_approval_detail_apply_time">申请时间</string>
    <string name="vehicle_approval_detail_destination">目的地</string>
    <string name="vehicle_approval_detail_vehicle_type">用车类型</string>
    <string name="vehicle_approval_detail_vehicle_range">用车范围</string>
    <string name="vehicle_approval_detail_predict_vehicle_time">预计用车时间</string>
    <string name="vehicle_approval_detail_designated_vehicle">车牌号</string>
    <string name="vehicle_approval_detail_predict_time">预计用车时长</string>
    <string name="vehicle_approval_detail_vehicle_reason">用车事由</string>
    <string name="vehicle_approval_detail_designated_driver">指定司机</string>
    <string name="vehicle_approval_detail_accompany_person">随行人</string>
    <string name="vehicle_approval_detail_remark">备 注</string>
    <string name="vehicle_apply_approval_type">审核类型 :</string>
    <string name="vehicle_apply_approval_time">审核时间 :</string>
    <string name="vehicle_apply_approval_apply_name">申请人 :</string>
    <string name="vehicle_apply_approval_apply_time">申请时间 :</string>
    <string name="vehicle_apply_approval_destination">目的地 :</string>
    <string name="vehicle_apply_approval_vehicle_type">用车类型 :</string>
    <string name="vehicle_apply_approval_vehicle_range">用车范围 :</string>
    <string name="vehicle_apply_approval_predict_vehicle_time">预计用车时间 :</string>
    <string name="vehicle_apply_approval_designated_vehicle">指定车辆 :</string>
    <string name="vehicle_apply_approval_predict_use_time">预计用车时长 :</string>
    <string name="vehicle_apply_approval_vehicle_reason">用车事由 :</string>
    <string name="vehicle_apply_approval_designated_driver">指定司机 :</string>
    <string name="vehicle_apply_approval_accompany_person">随行人 :</string>
    <string name="vehicle_apply_approval_remark">备 注 :</string>
    <string name="vehicle_apply_approval_status">审核状态 :</string>
    <string name="vehicle_apply_approval_advice">审核意见 :</string>
    <string name="vehicle_registration_apply_name">申请人 :</string>
    <string name="vehicle_registration_apply_time">申请时间 :</string>
    <string name="vehicle_registration_destination">目的地 :</string>
    <string name="vehicle_registration_vehicle_type">用车类型 :</string>
    <string name="vehicle_registration_vehicle_reason">用车事由 :</string>
    <string name="vehicle_registration_designated_vehicle">指定车辆 :</string>
    <string name="vehicle_registration_accompany_person">随行人 :</string>
    <string name="vehicle_registration_designated_driver">指定司机 :</string>
    <string name="vehicle_registration_predict_start_time">预计开始时间 :</string>
    <string name="vehicle_registration_predict_end_time">预计用车时长 :</string>
    <string name="vehicle_registration_predict_vehicle_time">预计用车时间 :</string>
    <string name="vehicle_registration_is_use">是否用车 :</string>
    <string name="vehicle_registration_get_car">领车人 :</string>
    <string name="vehicle_registration_get_car_time">领车时间 :</string>
    <string name="vehicle_registration_remark">备 注 :</string>
    <string name="return_registration_apply_name">申请人 :</string>
    <string name="return_registration_apply_time">申请时间 :</string>
    <string name="return_registration_destination">目的地 :</string>
    <string name="return_registration_vehicle_type">用车类型 :</string>
    <string name="return_registration_vehicle_reason">用车事由 :</string>
    <string name="return_registration_designated_vehicle">指定车辆 :</string>
    <string name="return_registration_accompany_person">随行人 :</string>
    <string name="return_registration_designated_driver">指定司机 :</string>
    <string name="return_registration_get_car">领车人 :</string>
    <string name="return_registration_get_car_time">领车时间 :</string>
    <string name="return_registration_return_car">还车人 :</string>
    <string name="return_registration_return_car_time">还车时间 :</string>
    <string name="return_registration_remark">备 注 :</string>
    <string name="repair_apply_record_number">记录编号 :</string>
    <string name="repair_apply_name">申请人 :</string>
    <string name="repair_apply_time">申请日期 :</string>
    <string name="repair_apply_vehicle_name">车辆名称 :</string>
    <string name="repair_apply_vehicle_license">车牌号 :</string>
    <string name="repair_apply_estimated_cost">本次预计费用(元) :</string>
    <string name="repair_apply_handle_person">处理人 :</string>
    <string name="repair_apply_cost_bearing">费用承担方 :</string>
    <string name="repair_apply_situation_description">车辆描述 :</string>
    <string name="repair_apply_remark">备 注 :</string>
    <string name="repair_approval_detail_record_number">记录编号</string>
    <string name="repair_approval_detail_apply_time">申请日期</string>
    <string name="repair_approval_detail_vehicle_name">车辆名称</string>
    <string name="repair_approval_detail_vehicle_license">车牌号</string>
    <string name="repair_approval_detail_estimated_cost">本次预计费用(元)</string>
    <string name="repair_approval_detail_handle_person">处理人</string>
    <string name="repair_approval_detail_cost_bearing">费用承担方</string>
    <string name="repair_approval_detail_situation_description">车辆描述</string>
    <string name="repair_approval_detail_remark">备 注</string>
    <string name="repair_registration_record_number">记录编号 :</string>
    <string name="repair_registration_repair_status">维修状态 :</string>
    <string name="repair_registration_actual_cost">本次实际费用(元) :</string>
    <string name="repair_registration_repair_time">维修时间 :</string>
    <string name="repair_registration_remark">备 注 :</string>
    <string name="maintain_apply_record_number">记录编号 :</string>
    <string name="maintain_apply_name">申请人 :</string>
    <string name="maintain_apply_time">申请日期 :</string>
    <string name="maintain_apply_vehicle_name">车辆名称 :</string>
    <string name="maintain_apply_vehicle_license">车牌号 :</string>
    <string name="maintain_apply_estimated_cost">本次预计费用(元) :</string>
    <string name="maintain_apply_cost_bearing">费用承担方 :</string>
    <string name="maintain_apply_vehicle_description">车况描述 :</string>
    <string name="maintain_apply_remark">备 注 :</string>
    <string name="maintain_approval_detail_record_number">记录编号</string>
    <string name="maintain_approval_detail_apply_name">申请人</string>
    <string name="maintain_approval_detail_apply_time">申请日期</string>
    <string name="maintain_approval_detail_vehicle_name">车辆名称</string>
    <string name="maintain_approval_detail_vehicle_license">车牌号</string>
    <string name="maintain_approval_detail_estimated_cost">本次预计费用(元)</string>
    <string name="maintain_approval_detail_cost_bearing">费用承担方</string>
    <string name="maintain_approval_detail_vehicle_description">车况描述</string>
    <string name="maintain_approval_detail_remark">备 注</string>
    <string name="maintain_registration_record_number">记录编号 :</string>
    <string name="maintain_registration_apply_name">申请人 :</string>
    <string name="maintain_registration_apply_time">申请日期 :</string>
    <string name="maintain_registration_vehicle_name">车辆名称 :</string>
    <string name="maintain_registration_vehicle_license">车牌号 :</string>
    <string name="maintain_registration_estimated_cost">本次预计费用(元) :</string>
    <string name="maintain_registration_maintain_status">保养状态 :</string>
    <string name="maintain_registration_maintain_content">保养内容 :</string>
    <string name="maintain_registration_handle_person">处理人 :</string>
    <string name="maintain_registration_actual_cost">本次实际费用(元) :</string>
    <string name="maintain_registration_actual_maintain_time">实际保养时间 :</string>
    <string name="maintain_registration_cost_bearing">费用承担方 :</string>
    <string name="maintain_registration_remark">备 注 :</string>
    <string name="vehicle_location_detail_name">车 辆 :</string>
    <string name="vehicle_location_detail_license">车牌号 :</string>
    <string name="vehicle_location_detail_electricity">电 量 :</string>
    <string name="vehicle_location_detail_use_people">使用人 :</string>
    <string name="vehicle_location_detail_destination">目的地 :</string>
    <string name="vehicle_location_detail_travel_task">出行任务 :</string>
    <string name="vehicle_location_detail_look_travel_task">查 看</string>
    <string name="travel_task_apply_name">申请人 :</string>
    <string name="travel_task_apply_time">申请时间 :</string>
    <string name="travel_task_destination">目的地 :</string>
    <string name="travel_task_vehicle_type">用车类型 :</string>
    <string name="travel_task_vehicle_range">用车范围 :</string>
    <string name="travel_task_vehicle_reason">用车事由 :</string>
    <string name="travel_task_vehicle_license">车牌号 :</string>
    <string name="travel_task_whether_use_car">是否用车 :</string>
    <string name="travel_task_predict_vehicle_time">预计用车时间 :</string>
    <string name="travel_task_vehicle_duration">预计用车时长 :</string>
    <string name="travel_task_designated_driver">指定司机 :</string>
    <string name="travel_task_accompany_person">随行人 :</string>
    <string name="travel_task_get_car">领车人 :</string>
    <string name="travel_task_get_car_time">领车时间 :</string>
    <string name="travel_task_return_car">还车人 :</string>
    <string name="travel_task_return_car_time">还车时间 :</string>
    <string name="travel_task_remark">备 注 :</string>
    <string name="vehicle_data_detail_name">车 辆 :</string>
    <string name="vehicle_data_detail_license">车牌号 :</string>
    <string name="vehicle_data_detail_electricity">电 量 :</string>
    <string name="vehicle_data_detail_life_mileage">续航 :</string>
    <string name="vehicle_data_detail_total_mileage">总里程 :</string>
    <string name="vehicle_data_detail_full_time">充电信息 :</string>
    <string name="vehicle_data_detail_hundred_speed">最近百公里速度 :</string>
    <string name="vehicle_data_detail_hundred_gasoline">最近百公里油耗 :</string>
    <string name="contact_administrator">请联系管理员!</string>
    <string name="version_upgrade">版本升级</string>
    <string name="update_now">立即更新</string>
    <string name="not_update_now">暂不更新</string>
    <string name="press_exit_program">再按一次退出程序</string>
    <string name="network_service_error">获取数据失败,请检查网络或稍后重试^_^</string>
    <string name="network_connect_failed">链接失败，请检查网络或稍后重试^_^</string>
    <string name="network_request_timeout">请求超时，请检查网络或稍后重试^_^</string>
    <string name="version_is_latest">当前已经是最新版本!</string>
    <string name="login_userName">请输入用户名</string>
    <string name="login_userPwd">请输入密码</string>
    <string name="remember_password">记住密码</string>
    <string name="forget_password">忘记密码?</string>
    <string name="login">登 录</string>
    <string name="username_password_not_null">用户名或密码不能为空!</string>
    <string name="company_name">贵州玖能行能源科技有限公司</string>
    <string name="copyright_reversed">Copyright © 2019-2029</string>
    <string name="main_message">消息!</string>
    <string name="main_application">应用</string>
    <string name="jmui_send">发送</string>
    <string name="jmui_video">视频</string>
    <string name="document">文档</string>
    <string name="album">相册</string>
    <string name="audio">音频</string>
    <string name="other">其他</string>
</resources>