<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

   <ImageView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_centerHorizontal="true"
       android:layout_marginTop="@dimen/dp_80"
       android:src="@mipmap/ic_login_logo"/>

   <LinearLayout
       android:id="@+id/ll_login_input"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_centerInParent="true"
       android:orientation="vertical">
      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="@dimen/dp_44"
          android:layout_marginLeft="@dimen/dp_25"
          android:layout_marginRight="@dimen/dp_25"
          android:background="@drawable/login_input_bg">
         <ImageView
             android:id="@+id/imgView1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/dp_25"
             android:layout_centerVertical="true"
             android:src="@mipmap/ic_login_username"/>
         <EditText
             android:id="@+id/et_login_userName"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:textSize="@dimen/sp_14"
             android:layout_marginLeft="@dimen/dp_20"
             android:background="@android:color/transparent"
             android:hint="@string/login_userName"
             android:textColorHint="@color/grey_9"
             android:textColor="@color/grey_6"
             android:textStyle="bold"
             android:maxLength="18"
             android:layout_toRightOf="@+id/imgView1"/>
      </RelativeLayout>
      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="@dimen/dp_44"
          android:layout_marginLeft="@dimen/dp_25"
          android:layout_marginRight="@dimen/dp_25"
          android:background="@drawable/login_input_bg"
          android:layout_marginTop="@dimen/dp_10">
         <ImageView
             android:id="@+id/imgView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/dp_25"
             android:layout_centerVertical="true"
             android:src="@mipmap/ic_login_password"/>
         <EditText
             android:id="@+id/et_login_userPwd"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:textSize="@dimen/sp_14"
             android:layout_marginLeft="@dimen/dp_20"
             android:background="@android:color/transparent"
             android:textColorHint="@color/grey_9"
             android:textColor="@color/grey_6"
             android:textStyle="bold"
             android:hint="@string/login_userPwd"
             android:inputType="textPassword"
             android:maxLength="18"
             android:layout_toRightOf="@+id/imgView2"/>
      </RelativeLayout>
   </LinearLayout>

   <RelativeLayout
       android:id="@+id/rl_remember_password"
       android:layout_below="@+id/ll_login_input"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginLeft="@dimen/dp_35"
       android:layout_marginRight="@dimen/dp_35"
       android:layout_marginTop="@dimen/dp_10">
      <android.support.v7.widget.AppCompatCheckBox
          android:id="@+id/chk_login_remember_password"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:theme="@style/MyCheckBox"
          android:text="@string/remember_password"
          android:textColor="@color/grey_6"
          android:textSize="@dimen/sp_12"/>
      <TextView
          android:id="@+id/tv_login_forget_password"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentRight="true"
          android:layout_centerVertical="true"
          android:text="@string/forget_password"
          android:textColor="@color/colorAccent"
          android:textSize="@dimen/sp_12"/>
   </RelativeLayout>

   <Button
       android:id="@+id/btn_login"
       android:layout_below="@+id/rl_remember_password"
       android:layout_width="match_parent"
       android:layout_height="@dimen/dp_44"
       android:layout_marginTop="@dimen/dp_20"
       android:layout_marginLeft="@dimen/dp_25"
       android:layout_marginRight="@dimen/dp_25"
       android:text="@string/login"
       android:textStyle="bold"
       android:textColor="@color/white"
       android:textSize="@dimen/sp_18"
       android:background="@drawable/btn_frame_filling_green"/>

   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textSize="@dimen/sp_10"
       android:layout_centerHorizontal="true"
       android:layout_marginBottom="@dimen/dp_10"
       android:layout_above="@+id/tv_login_copyright"
       android:textColor="@color/grey_6"
       android:text="@string/company_name"/>

   <TextView
       android:id="@+id/tv_login_copyright"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textSize="@dimen/sp_10"
       android:layout_alignParentBottom="true"
       android:layout_centerHorizontal="true"
       android:layout_marginBottom="@dimen/dp_30"
       android:textColor="@color/grey_6"
       android:text="@string/copyright_reversed" />

</RelativeLayout>
