<?xml version="1.0" encoding="utf-8"?>
<com.hxd.gobus.chat.view.SendFileView android:id="@+id/send_file_view"
                                xmlns:android="http://schemas.android.com/apk/res/android"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="#ffffff"
                                android:orientation="vertical">


    <include layout="@layout/toolbar_layout"/>

    <LinearLayout
        android:id="@+id/action_bar_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/actionbar_file_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_38"
                android:background="#fff"
                android:text="@string/document"
                android:textColor="@color/send_file_action_bar"/>

            <ImageView
                android:id="@+id/slipping_1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_2"
                android:src="@drawable/slipping"
                android:visibility="invisible"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0_5"
                android:background="#D9D9D9"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/actionbar_video_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_38"
                android:background="#fff"
                android:text="@string/jmui_video"
                android:textColor="@color/send_file_action_bar"/>

            <ImageView
                android:id="@+id/slipping_2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_2"
                android:src="@drawable/slipping"
                android:visibility="invisible"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0_5"
                android:background="#D9D9D9"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/actionbar_album_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_38"
                android:background="#fff"
                android:text="@string/album"
                android:textColor="@color/send_file_action_bar"/>

            <ImageView
                android:id="@+id/slipping_3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_2"
                android:src="@drawable/slipping"
                android:visibility="invisible"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0_5"
                android:background="#D9D9D9"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/actionbar_audio_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_38"
                android:background="#fff"
                android:text="@string/audio"
                android:textColor="@color/send_file_action_bar"
                android:textSize="@dimen/sp_16"/>

            <ImageView
                android:id="@+id/slipping_4"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_2"
                android:src="@drawable/slipping"
                android:visibility="invisible"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0_5"
                android:background="#D9D9D9"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/actionbar_other_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_38"
                android:background="#fff"
                android:text="@string/other"
                android:textColor="@color/send_file_action_bar"
                android:textSize="@dimen/sp_16"/>

            <ImageView
                android:id="@+id/slipping_5"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_2"
                android:layout_gravity="bottom"
                android:scaleType="fitXY"
                android:src="@drawable/slipping"
                android:visibility="invisible"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0_5"
                android:background="#D9D9D9"/>
        </LinearLayout>
    </LinearLayout>

    <com.hxd.gobus.chat.view.ScrollControlViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/send_file_rl"
        android:layout_below="@+id/action_bar_ll">
    </com.hxd.gobus.chat.view.ScrollControlViewPager>

    <RelativeLayout
        android:id="@+id/send_file_rl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_alignParentBottom="true"
        android:background="#F8F9FA">

        <TextView
            android:id="@+id/size_desc"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:ems="10"
            android:gravity="center_vertical"
            android:padding="@dimen/dp_10"
            android:textSize="@dimen/sp_16"/>

        <Button
            android:id="@+id/send_file_btn"
            android:layout_width="@dimen/dp_72"
            android:layout_height="@dimen/dp_29"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dp_14"
            android:background="@drawable/blue_btn_selector"
            android:text="@string/jmui_send"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/sp_16"/>

    </RelativeLayout>


</com.hxd.gobus.chat.view.SendFileView>