<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:fitsSystemWindows="true">

    <include
        layout="@layout/toolbar_layout"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_above="@+id/ll_public_approval_commit"
        android:layout_below="@+id/toolbar">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                android:paddingTop="@dimen/dp_16"
                android:paddingBottom="@dimen/dp_16"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/vehicle_apply_approval_type"
                    android:textStyle="bold"
                    android:textColor="@color/grey_6"
                    android:textSize="@dimen/sp_14"/>
                <TextView
                    android:id="@+id/tv_public_approval_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:textColor="@color/grey_6"
                    android:textSize="@dimen/sp_14"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0_5"
                android:layout_marginLeft="@dimen/dp_20"
                android:background="@color/line_eaeaea" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                android:paddingTop="@dimen/dp_16"
                android:paddingBottom="@dimen/dp_16"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/vehicle_apply_approval_status"
                    android:textStyle="bold"
                    android:textColor="@color/grey_6"
                    android:textSize="@dimen/sp_14"/>
                <TextView
                    android:id="@+id/tv_public_approval_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:textColor="@color/grey_6"
                    android:textSize="@dimen/sp_14"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0_5"
                android:layout_marginLeft="@dimen/dp_20"
                android:background="@color/line_eaeaea" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                android:paddingTop="@dimen/dp_16"
                android:paddingBottom="@dimen/dp_16"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/vehicle_apply_approval_advice"
                    android:textStyle="bold"
                    android:textColor="@color/grey_6"
                    android:textSize="@dimen/sp_14"/>
                <EditText
                    android:id="@+id/et_public_approval_advice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:maxLength="100"
                    android:hint="@string/please_input_hint"
                    android:textColorHint="@color/grey_9"
                    android:textColor="@color/grey_6"
                    android:textSize="@dimen/sp_14"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0_5"
                android:layout_marginLeft="@dimen/dp_20"
                android:background="@color/line_eaeaea" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                android:paddingTop="@dimen/dp_16"
                android:paddingBottom="@dimen/dp_16"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/vehicle_apply_approval_time"
                    android:textStyle="bold"
                    android:textColor="@color/grey_6"
                    android:textSize="@dimen/sp_14"/>
                <TextView
                    android:id="@+id/tv_public_approval_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:textColor="@color/grey_6"
                    android:textSize="@dimen/sp_14"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/ll_public_approval_commit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_55"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp_10"
        android:paddingRight="@dimen/dp_10"
        android:background="@color/white">
        <Button
            android:id="@+id/btn_public_approval_save"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_38"
            android:background="@drawable/btn_frame_filling_green"
            android:layout_weight="1"
            android:text="@string/apply_save"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_14"/>
    </LinearLayout>

</RelativeLayout>
